<resources>
    <string name="incorrect_date"> Please enter a future date! </string>
    <string name="incorrect_format">Please enter a date in the correct MM/DD/YEAR format</string>
    <string name="app_name">Oyster Delivery Recovery</string>
    <string name="logged_in_user_string">Now you are a logged in user of this app!</string>
    <string name="account_login_string">Account login</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="register_new_account_string">Register new account</string>
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later</string>
    <string name="invalid_password">Password must contain at least 8 characters with one letter, one number, and one special character!</string>
    <string name="invalid_email"> Please enter valid email… </string>
    <string name="invalid_carColor"> Please enter the color of your car </string>
    <string name="invalid_carMake"> Please enter maker of your car </string>
    <string name="invalid_carPlate"> Please enter your vehicle\'s License Plate </string>
    <string name="login_toast"> Please enter email… </string>
    <string name="password_toast">Please enter password!</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="accept">Accept</string>
    <string name="directions">Directions</string>
    <string name="findPickup">Find Pickup</string>
    <string name="currentPickups">Current Pickups</string>
    <string name="dropoff">Drop Off</string>
    <string name="driverHistory">Driver History</string>
    <string name="current">Current Jobs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="driver_history"> Order History </string>
    <string name="schedule_pickup"> Schedule Pickups </string>

    <string name="pickup_date"> Enter a Pickup Date</string>
    <string name="submit_pickup_request"> Confirm Request </string>

    <string name="registeringDriver"> Register as a Driver </string>
    <string name="registeringFirstName"> First Name </string>
    <string name="registeringLastName"> Last Name </string>
    <string name="registeringDriverNow"> Driver Registration </string>
    <string name="vehicleMakeModel"> Vehicle Make (Ex: GMC, Honda, Ferrari, etc.) </string>
    <string name="vehicleColor"> Color of your vehicle </string>
    <string name="vehicleLicensePlate"> License Plate characters </string>
    <string name="registeringRestaurant"> Register as a Restaurant </string>
    <string name="registeringRestaurantNow"> Restaurant Registration </string>
    <string name="registeringRestaurantName"> Name of Restaurant </string>
    <string name="registeringRestaurantLocation"> Restaurant Address </string>
    <string name="newUserText"> Are you a new user? </string>
</resources>