<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:src="@drawable/pacific_oyster" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:textStyle="bold"
        android:text="@string/account_login_string"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint_string"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint_string"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_string" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="130dp"
        android:paddingTop="40dp"
        android:text="@string/newUserText" />

    <Button
        android:id="@+id/registerDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registeringDriver" />

    <Button
        android:id="@+id/registerRestaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registeringRestaurant" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>