<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DriverFindJobFragment"
    android:background="@color/background">

    <ImageView
        android:id="@+id/logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background_color"
        android:src="@drawable/logout"
        />

    <ImageView
        android:id="@+id/refresh"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/refresh"
        android:text="@string/refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout" />

    <ImageView
        android:id="@+id/directions"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/directions"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/list"
        android:src="@drawable/maps"
        />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/finish"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/directions"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/green"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finish"
        android:backgroundTint="@color/red"/>

    <Button
        android:id="@+id/findPickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="520dp"
        android:text="@string/findPickup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/logout"
        android:backgroundTint="@color/background_color"/>

    <Button
        android:id="@+id/dropoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dropoff"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list"
        android:backgroundTint="@color/background_color"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/findPickup"
        app:layout_constraintStart_toEndOf="@id/refresh"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/driverHistory"
        android:id="@+id/toggle"
        android:backgroundTint="@color/background"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginRight="150dp"
        app:layout_constraintStart_toEndOf="@id/logout"
        app:layout_constraintEnd_toEndOf="@id/findPickup"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="course.cmsc436.DriverFragment"
        android:layout_width="200dp"
        android:layout_height="450dp"
        android:scrollbars="vertical"
        android:layout_marginLeft="10dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="DriverFragment"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refresh"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>