<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"

    android:padding="16dp"
    tools:context=".RegistrationDriverFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:src="@drawable/oyster_pic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/registeringDriverNow" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameFirst_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registeringFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="email"
            android:background="@color/white"
            android:inputType="text"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLast_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registeringLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="email"
            android:background="@color/white"
            android:inputType="text"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint_string">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="email"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint_string">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@color/white"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/driverVehicle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicleMakeModel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/driverVehicleMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/driverVehicleColor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicleColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/driverVehicleColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/driverVehicleLicensePlate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicleLicensePlate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/driverVehicleLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/driverRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registeringDriver" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>