<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DriverFindJobFragment">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/refresh"
        app:layout_constraintTop_toBottomOf="@id/logout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/currentPickups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentPickups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/accept"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/list"
        tools:ignore="MissingConstraints"
        android:background="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="course.examples.fragments.staticlayout.TitleFragment"
        android:layout_width="250dp"
        android:layout_height="600dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        tools:context="DriverFragment"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refresh"
        tools:listitem="@layout/item_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>