<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RestaurantSchedulePickupFragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/pickup_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pickup_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:layout_margin="26dp"
        app:layout_constraintBottom_toTopOf="@id/submit_pickup_request"
        app:layout_constraintStart_toStartOf="parent"
         />

    <ImageView
        android:id="@+id/logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background_color"
        android:src="@drawable/logout"
        />

    <Button
        android:id="@+id/submit_pickup_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:hint="@string/submit_pickup_request"
        app:layout_constraintStart_toStartOf="@id/pickup_date"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>